// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing react components using jest snapshot Testing Button component 1`] = `
<div
  className="btn btn-orange"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex="+"
>
  +
</div>
`;

exports[`testing react components using jest snapshot Testing Calculator component 1`] = `
<div
  className="screen"
>
  <div
    className="container twoColumns"
  >
    <div>
      <h2>
        Let's do some Math!
      </h2>
    </div>
    <div
      className="calculatorBody"
    >
      <div
        className="screenCalc"
        data-testid="mainScreen"
      >
        0
      </div>
      <div
        className="rowBtns"
      >
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="AC"
        >
          AC
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="+/-"
        >
          +/-
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="%"
        >
          %
        </div>
        <div
          className="btn btn-orange"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="÷"
        >
          ÷
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="7"
        >
          7
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="8"
        >
          8
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="9"
        >
          9
        </div>
        <div
          className="btn btn-orange"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="x"
        >
          x
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="4"
        >
          4
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="5"
        >
          5
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="6"
        >
          6
        </div>
        <div
          className="btn btn-orange"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="-"
        >
          -
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="1"
        >
          1
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="2"
        >
          2
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="3"
        >
          3
        </div>
        <div
          className="btn btn-orange"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="+"
        >
          +
        </div>
        <div
          className="btn btn-normal double"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          0
        </div>
        <div
          className="btn btn-normal"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="."
        >
          .
        </div>
        <div
          className="btn btn-orange"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="="
        >
          =
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`testing react components using jest snapshot Testing Calculator component 2`] = `
<div
  className="calculatorBody"
>
  <div
    className="screenCalc"
    data-testid="mainScreen"
  >
    0
  </div>
  <div
    className="rowBtns"
  >
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="AC"
    >
      AC
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="+/-"
    >
      +/-
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="%"
    >
      %
    </div>
    <div
      className="btn btn-orange"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="÷"
    >
      ÷
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="7"
    >
      7
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="8"
    >
      8
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="9"
    >
      9
    </div>
    <div
      className="btn btn-orange"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="x"
    >
      x
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="4"
    >
      4
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="5"
    >
      5
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="6"
    >
      6
    </div>
    <div
      className="btn btn-orange"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="-"
    >
      -
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="1"
    >
      1
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="2"
    >
      2
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="3"
    >
      3
    </div>
    <div
      className="btn btn-orange"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="+"
    >
      +
    </div>
    <div
      className="btn btn-normal double"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      0
    </div>
    <div
      className="btn btn-normal"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="."
    >
      .
    </div>
    <div
      className="btn btn-orange"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="="
    >
      =
    </div>
  </div>
</div>
`;

exports[`testing react components using jest snapshot Testing Header component 1`] = `
<div
  className="header"
>
  <div
    className="container d-flex"
  >
    <div
      className="logo"
    >
      <img
        alt="Math Magicians"
        src="calculator.png"
      />
      <h1>
        Math Magicians
      </h1>
    </div>
    <nav>
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/calculator"
          >
            Calculator
          </a>
        </li>
        <li>
          <a
            href="/quote"
          >
            Quote
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`testing react components using jest snapshot Testing Home component 1`] = `
<div
  className="screen"
>
  <div
    className="container"
  >
    <h2>
      Welcome to our page!
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vitae quam vel neque pulvinar tincidunt. Nulla consectetur, ante ut viverra fringilla, est urna ultricies mauris, ac fringilla risus neque id lectus. Phasellus porta enim a nibh tincidunt, id sollicitudin libero egestas. Praesent vitae massa scelerisque turpis feugiat faucibus id a dui. Duis laoreet vehicula elit, eu eleifend lorem iaculis eu. Aenean non ante id velit lobortis faucibus. Donec pretium convallis nisl. Vestibulum viverra efficitur libero et suscipit. Donec non nulla id enim imperdiet interdum. Nullam viverra magna non mi venenatis tincidunt. Nam vitae lacinia nisl. Etiam quis neque justo. Morbi consectetur diam et cursus cursus. Cras rhoncus semper nisi, convallis molestie tortor. Nulla scelerisque lorem augue, et pharetra diam malesuada id.
    </p>
    <p>
      Proin vitae imperdiet risus. Etiam id lacinia risus. Suspendisse lobortis felis turpis, non   sodales lacus consequat eget. Nam quis sem a lectus tincidunt imperdiet quis a nulla. In eros libero, consectetur ac nibh feugiat, tristique ultrices nisl. Suspendisse blandit malesuada mauris sed fermentum. Morbi rutrum et nulla quis malesuada. Nulla lacinia arcu eu velit placerat, posuere tristique nibh ultrices. Phasellus consequat leo nisl, nec aliquam velit posuere vitae. Mauris sit amet consequat nunc, in lobortis est. Nam lobortis tincidunt elit sit amet molestie.
    </p>
  </div>
</div>
`;

exports[`testing react components using jest snapshot Testing Quote component 1`] = `
<div
  className="screen"
>
  <div
    className="container"
  >
    <br />
    <br />
    <br />
    <h2>
      Matenatics is not about numbers, equations, computations, or algorithms: is about understanding -William Paul Thurston.
    </h2>
  </div>
</div>
`;
